--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ dist-ssr
 !package.json
 !tsconfig*.json
 !vite.config.ts
+
+# Claude internal files (keep CLAUDE.md as it's useful docs)
+.claude/
+
