feat: implement core email client UI with email list, detail, compose, and integrate Copilot AI assistant sidebar

--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,5 @@ dist-ssr
 !package.json
 !tsconfig*.json
 !vite.config.ts
-
-# Claude internal files (keep CLAUDE.md as it's useful docs)
-.claude/
+Claude.md
 
