--- a/package.json
+++ b/package.json
@@ -16,17 +16,29 @@
     "@copilotkit/runtime": "^1.51.3",
     "@copilotkit/shared": "^1.51.3",
     "@google-cloud/pubsub": "^5.2.2",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@react-oauth/google": "^0.13.4",
     "@tailwindcss/vite": "^4.1.18",
     "body-parser": "^2.2.2",
+    "class-variance-authority": "^0.7.1",
     "cors": "^2.8.6",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "google-auth-library": "^10.5.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-hook-form": "^7.71.1",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.1.18",
+    "zod": "^4.3.6",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
@@ -36,7 +48,9 @@
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.7.0",
+    "clsx": "^2.1.1",
     "jsdom": "^28.0.0",
+    "tailwind-merge": "^3.4.0",
     "typescript": "^5.9.3",
     "vite": "^5.4.21",
     "vitest": "^4.0.18"
