--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,8 @@ VITE_GMAIL_CLIENT_ID=your-client-id.apps.googleusercontent.com
 VITE_GMAIL_CLIENT_SECRET=your-client-secret
 VITE_GMAIL_REDIRECT_URI=http://localhost:3000/auth/callback
 
+# WebSocket server URL for real-time email sync
+VITE_WEBSOCKET_URL=http://localhost:8080
+
 # Optional: Google Cloud Pub/Sub Topic for push notifications
 VITE_PUBSUB_TOPIC=projects/your-project/topics/gmail-notifications
