--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@react-oauth/google": "^0.13.4",
     "@tailwindcss/vite": "^4.1.18",
+    "body-parser": "^2.2.2",
     "class-variance-authority": "^0.7.1",
+    "cors": "^2.8.6",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.4",
+    "express": "^5.2.1",
     "google-auth-library": "^10.5.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
+    "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.6",
