feat: Implement real-time email synchronization with Server-Sent Events (SSE), a new design system, and core UI components.

--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,10 @@ VITE_GMAIL_REDIRECT_URI=http://localhost:3000/auth/callback
 VITE_COPILOT_API_KEY=
 VITE_COPILOT_ENDPOINT=
 
-# WebSocket server URL for real-time email sync
-VITE_WEBSOCKET_URL=http://localhost:8080
+# Optional: API base URL for server-side endpoints (SSE, webhooks)
+# Defaults to current origin if not specified
+VITE_API_URL=
 
 # Optional: Google Cloud Pub/Sub Topic for push notifications
+# Used with Gmail webhook integration for real-time email updates
 VITE_PUBSUB_TOPIC=projects/your-project/topics/gmail-notifications
-
-# Allowed CORS origins for WebSocket server (comma-separated)
-ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
