--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-oauth/google": "^0.13.4",
     "@tailwindcss/vite": "^4.1.18",
+    "@vercel/kv": "^3.0.0",
     "body-parser": "^2.2.2",
     "class-variance-authority": "^0.7.1",
     "cors": "^2.8.6",
@@ -42,8 +43,6 @@
     "react-day-picker": "^9.13.2",
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
-    "socket.io": "^4.8.3",
-    "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
