--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
-    "rewrites": [
-        {
-            "source": "/api/(.*)",
-            "destination": "/api/index.js"
-        }
-    ],
     "headers": [
         {
             "source": "/(.*)",
@@ -15,11 +9,7 @@
                 },
                 {
                     "key": "X-Frame-Options",
-                    "value": "DENY"
-                },
-                {
-                    "key": "X-XSS-Protection",
-                    "value": "1; mode=block"
+                    "value": "SAMEORIGIN"
                 },
                 {
                     "key": "Cross-Origin-Opener-Policy",
@@ -28,10 +18,28 @@
                 {
                     "key": "Cross-Origin-Resource-Policy",
                     "value": "cross-origin"
+                }
+            ]
+        },
+        {
+            "source": "/api/sse/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "no-cache, no-transform"
                 },
                 {
-                    "key": "X-Frame-Options",
-                    "value": "SAMEORIGIN"
+                    "key": "X-Accel-Buffering",
+                    "value": "no"
+                }
+            ]
+        },
+        {
+            "source": "/api/webhook/(.*)",
+            "headers": [
+                {
+                    "key": "Cache-Control",
+                    "value": "no-cache, no-store"
                 }
             ]
         }
