--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-day-picker": "^9.13.2",
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
+    "streamdown": "^2.2.0",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
