--- a/vercel.json
+++ b/vercel.json
@@ -21,5 +21,11 @@
                 }
             ]
         }
+    ],
+    "rewrites": [
+        {
+            "source": "/(auth/callback|.*)",
+            "destination": "/index.html"
+        }
     ]
 }
