--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/dompurify": "^3.2.0",
     "body-parser": "^2.2.2",
     "class-variance-authority": "^0.7.1",
     "cors": "^2.8.6",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
+    "dompurify": "^3.3.1",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "google-auth-library": "^10.5.0",
